; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_provider_internal_test.c_test_configured_provider.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_provider_internal_test.c_test_configured_provider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"p_test_configured\00", align 1
@.str.1 = private unnamed_addr constant [44 x i8] c"Hello OpenSSL, greetings from Test Provider\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_configured_provider to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_configured_provider() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  store i32* null, i32** %2, align 8
  store i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = call i32* @ossl_provider_find(i32* null, i8* %4, i32 0)
  store i32* %5, i32** %2, align 8
  %6 = call i64 @TEST_ptr(i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load i32*, i32** %2, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @test_provider(i32* %9, i8* %10)
  %12 = icmp ne i64 %11, 0
  br label %13

13:                                               ; preds = %8, %0
  %14 = phi i1 [ false, %0 ], [ %12, %8 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i64 @TEST_ptr(i32*) #1

declare dso_local i32* @ossl_provider_find(i32*, i8*, i32) #1

declare dso_local i64 @test_provider(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
